find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib")

enable_testing()
file(GLOB test_sources "${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp")
foreach(test_source ${test_sources})
    get_filename_component(test_filename "${test_source}" NAME)
    string(REGEX REPLACE "\\.cpp$" "" test_target "${test_filename}")
    add_executable("test_${test_target}" ${test_source})
    target_link_libraries("test_${test_target}" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_SYSTEM_LIBRARY})
    add_test("test_${test_target}" "test_${test_target}")
endforeach(test_source)
